--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -604,7 +604,7 @@ blockquote p {
 
 code {
   font-family: Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal;
-  font-size: 13px;
+  font-size: 90%;
   /*white-space: nowrap;*/
   color: #efefef;
   text-shadow: 0px 1px 0px #000;
@@ -1058,3 +1058,18 @@ footer {
     width: auto;
   }*/
 }
+
+
+a.headerlink { display:none; }
+ul > li.toctree-l1 { padding: 0; }
+ul > li.toctree-l2 { 
+  padding: 0;
+  font-size: 12px;
+}
+
+div.line-block > div.line {
+  border-left: 3px solid #ffcc00;
+  margin-left: 10px;
+  padding: 0 0 0 20px;
+}
+
