--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -233,9 +233,8 @@ pre,
 code,
 kbd,
 samp {
-  font-family: monospace, serif;
-  _font-family: 'courier new', monospace;
-  font-size: 1em;
+  font-family: monospace, 'courier new', serif;
+  font-size: 0.9em;
 }
 
 /*
@@ -536,7 +535,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   color: #333;
-  margin: 0 0 10px;
+  margin: 0 0 25px;
 }
 
 p, ul, ol, table, pre, dl {
@@ -1072,4 +1071,31 @@ div.line-block > div.line {
   margin-left: 10px;
   padding: 0 0 0 20px;
 }
+
+td.linenos, td.code { padding: 0; }
+td.linenos > div.linenodiv > pre {
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  text-align: right;
+}
+td.code > div.highlight > pre {
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  margin-left: 0;
+  margin-right: 20px;
+  border-left: none;
+  max-width: 650px;
+}
+
+.align-right{
+  float: right;
+  margin: 0px 0px 24px 24px;
+}
+.align-left{
+  float: left;
+  margin: 0px 24px 24px 0px;
+}
+.align-center{
+  margin: auto;
+  display: block;
 
