--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1114,4 +1114,19 @@ td.code > div.highlight > pre {
   background-color: #FFE788;
   color: #9d7f0d;
   font-style: italic;
+  width: 120px;
+}
+.version{
+  position: fixed;
+  margin-left: -60px;
+  margin-top: 0;
+  left: 50%;
+  padding: 0px 12px;
+}
+.version > span {
+  line-height: 52px;
+  font-weight: bold;
+  color: #4276b6;
+  text-transform: uppercase;
+  text-shadow: rgba(255, 255, 255, 0.2) 0 1px 0;
 }
