--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -731,9 +731,9 @@ header a:hover {
 #banner {
   z-index: 100;
   left: 0;
-  right: 25%;
+  right: 0%;
   height: 50px;
-  margin-right: -182px;
+  /*margin-right: -182px;*/
   position: fixed;
   top: 135px;
   background: #ffcc00;
@@ -748,7 +748,7 @@ header a:hover {
   -ms-border-radius: 0px 2px 2px 0px;
   -khtml-border-radius: 0px 2px 2px 0px;
   border-radius: 0px 2px 2px 0px;
-  padding-right: 10px;
+  padding-right: 220px;
 }
 #banner .button {
   border: 1px solid #dba500;
@@ -827,7 +827,7 @@ header a:hover {
   position: absolute;
   height: 36px;
   width: 36px;
-  right: 7px;
+  right: 218px;
   top: 7px;
   display: block;
   background: url(../images/octocat-logo.png);
